@@ -8,27 +8,27 @@ import cn.hutool.core.convert.AbstractConverter;
 
 /**
  * URL对象转换器
- * @author Looly
  *
+ * @author Looly
  */
-public class URLConverter extends AbstractConverter<URL>{
-	private static final long serialVersionUID = 1L;
+public class URLConverter extends AbstractConverter<URL> {
+    private static final long serialVersionUID = 1L;
 
-	@Override
-	protected URL convertInternal(Object value) {
-		try {
-			if(value instanceof File){
-				return ((File)value).toURI().toURL();
-			}
-			
-			if(value instanceof URI){
-				return ((URI)value).toURL();
-			}
-			return new URL(convertToStr(value));
-		} catch (Exception e) {
-			// Ignore Exception
-		}
-		return null;
-	}
+    @Override
+    protected URL convertInternal(Object value) {
+        try {
+            if (value instanceof File) {
+                return ((File) value).toURI().toURL();
+            }
+
+            if (value instanceof URI) {
+                return ((URI) value).toURL();
+            }
+            return new URL(convertToStr(value));
+        } catch (Exception e) {
+            // Ignore Exception
+        }
+        return null;
+    }
 
 }
